--- a/res/layout/tab.xml
+++ b/res/layout/tab.xml
@@ -4,19 +4,37 @@
     android:layout_width="wrap_content"
     android:layout_height="48dp"
     android:layout_gravity="left"
-    android:layout_weight="0.2"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/tab_image"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:src="@drawable/ic_launcher" />
+    <TextView
+        android:id="@+id/tabLabel"
+        android:layout_width="fill_parent"
+        android:layout_height="43dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="#FFF"
+        android:textSize="14sp" />
 
     <TextView
-        android:id="@+id/tab_label"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:text="Label" android:layout_alignParentBottom="true" android:layout_below="@+id/tab_image"/>
+        android:id="@+id/tabSelectedDivider"
+        android:layout_width="fill_parent"
+        android:layout_height="5dp"
+        android:layout_alignParentBottom="true"
+        android:background="#3366CC"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/tabDivider"
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:layout_alignParentBottom="true"
+        android:background="#3366CC" />
+
+    <TextView
+        android:id="@+id/tabSplitter"
+        android:layout_width="1px"
+        android:layout_height="23dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="10dp"
+        android:background="#333" />
 
 </RelativeLayout>
